--- a/pom.xml
+++ b/pom.xml
@@ -9,7 +9,7 @@
 		<relativePath/> <!-- lookup parent from repository -->
 	</parent>
 	<groupId>com.javaproject</groupId>
-	<artifactId>database_service_project</artifactId>
+	<artifactId>Boardgame</artifactId>
 	<version>0.0.5-SNAPSHOT</version>
 	<name>database_service_project</name>
 	<description>Project for Spring Boot</description>
